a bunch of style changes around logo and qr code

--- a/public/admin.html
+++ b/public/admin.html
@@ -6,282 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - Reported Events</title>
     <link rel="stylesheet" href="/css/shared.css">
-    <style>
-        /* Basic Styles */
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #f4f7f9;
-            margin: 0;
-            padding: 20px;
-            color: #333;
-        }
-
-        main {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-        }
-
-        /* Dashboard Styles */
-        #dashboard-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        .stat-card {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-        }
-
-        .stat-card h3 {
-            margin: 0 0 10px;
-            font-size: 1rem;
-            color: #555;
-            font-weight: 600;
-        }
-
-        .stat-card p {
-            margin: 0;
-            font-size: 2.5rem;
-            font-weight: bold;
-            color: #007bff;
-        }
-
-        /* Chart Styles */
-        #stat-reason-chart {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            font-size: 0.9rem;
-        }
-
-        .chart-row {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .chart-label {
-            flex-basis: 120px;
-            /* Fixed width for labels */
-            flex-shrink: 0;
-            text-transform: capitalize;
-            text-align: right;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        .chart-bar-wrapper {
-            flex-grow: 1;
-            background-color: #e9ecef;
-            border-radius: 3px;
-            height: 20px;
-        }
-
-        .chart-bar {
-            background-color: #dc3545;
-            height: 100%;
-            border-radius: 3px;
-            transition: width 0.5s ease-in-out;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            color: white;
-            font-weight: bold;
-            font-size: 0.8rem;
-            padding-right: 5px;
-            box-sizing: border-box;
-        }
-
-        /* Filter Controls */
-        .filter-controls {
-            background-color: #fff;
-            padding: 15px 20px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-            display: flex;
-            gap: 20px;
-            align-items: flex-end;
-        }
-
-        .filter-group {
-            flex: 1;
-        }
-
-        .filter-group label {
-            display: block;
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
-
-        .filter-group input,
-        .filter-group select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        /* Report Card Styles */
-        .report-card {
-            background-color: #fff;
-            border: 1px solid #e0e0e0;
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .report-card h2 {
-            margin: 0;
-            font-size: 1.4rem;
-            color: #007bff;
-        }
-
-        .report-card h2 {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .view-on-map-link {
-            color: #6c757d;
-            text-decoration: none;
-            line-height: 1;
-        }
-
-        .view-on-map-link:hover {
-            color: #007bff;
-        }
-
-        .view-on-map-link svg {
-            width: 18px;
-            height: 18px;
-            stroke-width: 2.5;
-        }
-
-        .report-card p {
-            margin: 0;
-            line-height: 1.6;
-        }
-
-        strong {
-            color: #555;
-        }
-
-        /* Details Sections */
-        .event-details,
-        .report-details {
-            border-left: 3px solid #e0e0e0;
-            padding-left: 15px;
-        }
-
-        .report-details {
-            border-left-color: #dc3545;
-            /* Red for report */
-        }
-
-        /* Action Buttons */
-        .actions {
-            display: flex;
-            justify-content: flex-end;
-            gap: 10px;
-            margin-top: 10px;
-        }
-
-        .actions button {
-            padding: 8px 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: opacity 0.2s;
-            color: white;
-        }
-
-        .actions button:hover {
-            opacity: 0.85;
-        }
-
-        .btn-dismiss {
-            background-color: #ffc107;
-            /* Amber */
-        }
-
-        .btn-delete {
-            background-color: #dc3545;
-            /* Red */
-        }
-
-        .btn-edit {
-            background-color: #007bff;
-            /* Blue */
-        }
-
-        .loading,
-        .no-reports {
-            text-align: center;
-            font-size: 1.2rem;
-            color: #777;
-            padding: 40px;
-        }
-
-        /* Pagination Styles */
-        #pagination-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 5px;
-            margin-top: 20px;
-            padding-bottom: 20px;
-        }
-
-        #pagination-container button {
-            padding: 8px 12px;
-            border: 1px solid #ccc;
-            background-color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.2s, color 0.2s;
-        }
-
-        #pagination-container button:hover:not(:disabled) {
-            background-color: #f0f0f0;
-        }
-
-        #pagination-container button.active {
-            background-color: #007bff;
-            color: white;
-            border-color: #007bff;
-        }
-
-        #pagination-container button:disabled {
-            background-color: #e9ecef;
-            color: #6c757d;
-            cursor: not-allowed;
-        }
-
-        /* Responsive adjustments for filter controls */
-        @media (max-width: 600px) {
-            .filter-controls {
-                flex-direction: column;
-                align-items: stretch;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/css/admin.css">
 </head>
 
 <body>
