--- a/public/client.html
+++ b/public/client.html
@@ -15,14 +15,11 @@
     <meta name="mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-title" content="Events Map">
 
-    <!-- Load polyfills first -->
-    <script src="/js/polyfills.js"></script>
-
 </head>
 
 <body>
 
-    <div class="logo-container">
+    <div id="logo-container">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 100">
             <text x="0" y="40" font-family="Arial" font-size="48" fill="#333" stroke="#FFF" stroke-width="1.5px" stroke-linejoin="round" paint-order="stroke fill">
                 garagesailing
@@ -47,9 +44,10 @@
     </div>
 
     <div id="qr-code-container">
-        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://gapi-3iew.onrender.com"
-            alt="QR Code for mobile access">
-    </div>
+        <button id="show-qr-btn" title="Show QR code for mobile">
+            <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://gapi-3iew.onrender.com"
+                alt="QR Code for mobile access">
+        </button>
     </div>
 
     <div id="qr-modal">
@@ -334,17 +332,24 @@
                 // 1. Check for standalone "app mode" (PWA installed on home screen)
                 const isInStandaloneMode = window.matchMedia('(display-mode: standalone)').matches;
 
-                // You can use this to apply specific styles or run certain scripts
+                // 2. A simple check for a mobile device based on user agent
+                const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) || navigator.maxTouchPoints > 0;
+                console.log(`Is mobile device: ${isMobile}`);
+
+                // --- QR Code Visibility ---
+                // This is the single source of truth for showing/hiding the QR code.
+                const qrContainer = document.getElementById('qr-code-container');
+                if (qrContainer) {
+                    qrContainer.style.display = isMobile ? 'none' : 'block';
+                }
+
+                // Apply classes to the body based on the detected environment
                 if (isInStandaloneMode) {
                     console.log('App is running in standalone mode.');
                     document.body.classList.add('standalone-app');
-                } else {
-                    console.log('App is running in a browser tab.');
                 }
 
-                // 2. A simple check for a mobile device based on user agent
-                const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-                console.log(`Is mobile device: ${isMobile}`);
+
             }
             checkDisplayMode();
 
